syntax = "proto3";
package jsc.jsc;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "jsc/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "jsc/x/jsc/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/jsc/jsc/params";
  }
  // Queries a list of Hello items.
	rpc Hello(QueryHelloRequest) returns (QueryHelloResponse) {
		option (google.api.http).get = "/jsc/jsc/hello";
	}

// Queries a list of Myq items.
	rpc Myq(QueryMyqRequest) returns (QueryMyqResponse) {
		option (google.api.http).get = "/jsc/jsc/myq";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryHelloRequest {
}

message QueryHelloResponse {
  string text = 1;
}

message QueryMyqRequest {
}

message QueryMyqResponse {
}

// this line is used by starport scaffolding # 3
